# tghook

./: .coveragerc  .gitignore  .prettierrc.toml  Dockerfile  LICENSE.md  README.md  buildx.platform  entrypoint.sh  pyproject.toml
tests/: test_url_to_video_bot.py
tghook/: __init__.py  __main__.py  _adhoc_ssl.py  _bot_server.py  _external_ip.py  _header.py  _multipart_form_data.py  bot_server.py
tghook/example/: __init__.py  url_to_video.py
tghook/logger/: __init__.py  _console_formatter.py  _formatter.py  _json_formatter.py
tghook/telegram/: __init__.py  _constants.py  _delete_webhook.py  _get_me.py  _request.py  _set_webhook.py  types.py
url_to_video_bot/: __init__.py  adhoc_ssl.py  bot_server.py  external_ip.py  headers.py  telegram.py
url_to_video_bot/http/: multipart_form_data.py
url_to_video_bot/logger/: __init__.py  formatter.py
url_to_video_bot/telegram/: __init__.py  _constants.py  _delete_webhook.py  _get_me.py  _set_webhook.py  types.py
